src/main/resources/static/css/styles.css
.navbar{
    background-color: #121D57;
}
.navbar.navbar-dark .nav-link{
    color: #fff;
}

.menu-container {
    margin-top: 20px;
}

.menu-container .item-image{
    max-height: 210px;
}

.menu-item-container{
    background: #f4f4f4;
    padding: 0px;
    border-radius: 4px;
    border: 1px #d7d7d7 solid;
    margin-bottom: 30px;
    transition: 0.3s all;
}

.menu-item-container:hover .item-image {
    -webkit-filter: brightness(90%);
    transition: all .3s ease;
}

.menu-item-container:hover .btn-primary {
    -webkit-filter: brightness(80%);
    transition: all .3s ease;
}

.alert-warning:hover {
    -webkit-filter: brightness(90%);
    transition: all .3s ease;
}

.menu-item-container .btn-primary{
    margin-left: 6.25rem;
}

.flex-parent {
    display:flex;
    align-items: flex-start;
    padding: 10px;
    margin: 30px;
}

.card-text .truncated {
    flex: 1;
    min-width: 0;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

/*this is for the home page*/
.top-title-panel {
    background-color: lightblue;
}

.footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 60px;
    line-height: 60px;
    background-color: #f5f5f5;
}

